--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-sound": "^0.11.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "expo-av": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
