--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native": "^5.1.1",
     "@react-navigation/stack": "^5.2.3",
     "expo": "~36.0.0",
+    "expo-av": "~8.0.0",
+    "firebase": "^7.12.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -24,8 +26,7 @@
     "react-native-sound": "^0.11.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "expo-av": "~8.0.0"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
