--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-sound": "^0.11.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
+    "react-redux-firebase": "^3.3.0",
     "redux": "^4.0.5"
   },
   "devDependencies": {
